--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "preinstall": "npx npm-force-resolutions",
+    "dev": "nodemon --exec babel-node src/server --delay 2",
+    "migrate": "npx prisma migrate dev --preview-feature",
+    "studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +19,30 @@
     "url": "https://github.com/cps-user1/instaclone-backend/issues"
   },
   "homepage": "https://github.com/cps-user1/instaclone-backend#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@prisma/client": "^4.12.0",
+    "apollo-server": "^2.20.0",
+    "apollo-server-express": "^2.19.2",
+    "aws-sdk": "^2.839.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "firebase": "^9.14.0",
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.21.4",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.12.0"
+  },
+  "resolutions": {
+    "fs-capacitor": "^6.2.0",
+    "graphql-upload": "^11.0.0"
+  }
 }
